--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -1,5 +1,358 @@
 {
+  "common": {
+    "load-more": "加载更多",
+    "read-more": "了解更多",
+    "view-all": "查看所有",
+    "submitting": "提交",
+    "copy-to-clipboard": "复制到剪贴板",
+    "copied": "复制成功！",
+    "save": "保存",
+    "apply": "申请",
+    "close": "关闭",
+    "reset": "重置",
+    "restore": "恢复",
+    "coming-soon": "敬请期待..."
+  },
+  "time": {
+    "time-over": "该拍卖已过期",
+    "days-left": " 剩余{days}天",
+    "time-left-short": "剩余{days} {hours} {minutes} {seconds} ",
+    "days-short": "{days}天",
+    "hours-short": "{hours}时",
+    "minutes-short": "{minutes}分",
+    "seconds-short": "{seconds}秒"
+  },
   "header": {
-    "create": "创建"
+    "create": "创建",
+    "connect": "连接钱包",
+    "inventory": "我的主页",
+    "brands": "我的品牌",
+    "profile-settings": "主页设置",
+    "disconnect": "断开连接",
+    "search": {
+      "placeholder": "按名字/创建者/品牌搜索...",
+      "empty": "无搜索结果",
+      "items": "商品",
+      "brands": "品牌",
+      "users": "用户"
+    }
+  },
+  "language": {
+    "en-US": "English",
+    "zh-CN": "中文"
+  },
+  "social": {
+    "share": "分享",
+    "title-for-socials": "{title} — {description}",
+    "instagram": "Instagram",
+    "twitter": "Twitter",
+    "facebook": "Facebook",
+    "telegram": "Telegram"
+  },
+  "connect-wallet": {
+    "placeholder": {
+      "title": "连接钱包",
+      "brand-title": "请连接钱包，以查看该品牌下的商品。",
+      "description": "请连接钱包，以浏览页面内容。"
+    },
+    "custom-binancewallet": {
+      "name": "币安链",
+      "description": "币安链& 智能链钱包"
+    },
+    "custom-imtoken": {
+      "name": "imToken",
+      "description": "便捷安全的电子钱包--百万用户的选择"
+    },
+    "custom-math": {
+      "name": "Math Wallet",
+      "description": "通往区块链世界的门户"
+    },
+    "custom-trust": {
+      "name": "Trust Wallet",
+      "description": "最受信任、最安全的电子货币钱包"
+    },
+    "custom-huobi": {
+      "name": "Huobi Wallet",
+      "description": "实用、方便，支持多种货币"
+    }
+  },
+  "promo": {
+    "created-by": "创建者："
+  },
+  "unit": {
+    "day": "{value, plural, =0 {0 days} =1 {1 day} other {# days}}",
+    "BNB-value": "{value, number} BNB",
+    "$-value": "${value}",
+    "custom-unit": "{value, number} {unit}"
+  },
+  "error": {
+    "unexpected": "出现意外错误",
+    "data-is-not-available": "无法获取数据",
+    "greater-than": "数值需大于 {value}",
+    "less-than": "数值需小于 {value}"
+  },
+  "go-back": {
+    "action": "返回"
+  },
+  "create-nft": {
+    "title": "创建NFT",
+    "label": {
+      "name": "名称",
+      "description": "描述",
+      "channel": "类型",
+      "standard": "标准",
+      "supply": "总量"
+    },
+    "channelOption": {
+      "FineArts": "艺术",
+      "Sports": "体育",
+      "Comics": "漫画"
+    },
+    "standardOption": {
+      "0": "ERC-721",
+      "1": "ERC-1155"
+    },
+    "submit": "创建",
+    "submitting": "正在创建中"
+  },
+  "details-nft": {
+    "descr-full": "详细描述",
+    "descr-short": "展开",
+    "top-bid": "最高出价",
+    "buy-now": "购买",
+    "sold-out": "售罄",
+    "place-a-bid": "出价",
+    "tabs": {
+      "history": "历史",
+      "bids": "出价",
+      "owners": "拥有者",
+      "token-info": "Token信息"
+    },
+    "info": {
+      "date": "{value, date, medium}",
+      "time": "at {value, time, short}"
+    },
+    "dialog": {
+      "input-info": "您的出价必须至少为 {value} {currency}",
+      "footnote": "在拍卖中的出价无法撤销。"
+    }
+  },
+  "form": {
+    "limit-counter": "{value}/{maxLimit}"
+  },
+  "validation": {
+    "required": "此为必填项",
+    "min": "最小值为Smallest value is {value}",
+    "max": "最大值为Highest value is {value}",
+    "invalid-email": "请输入有效的邮箱地址",
+    "invalid-website": "请输入有效的网址",
+    "invalid-type": "无效的文件类型",
+    "max-size": "最大文件尺寸：{value, number}MB"
+  },
+  "upload-file-field": {
+    "choose-file": "选择文件",
+    "title": "支持拖拽上传",
+    "subtitle": "或 <strong>浏览</strong> 上传文件",
+    "formats-many": "支持 {firstTypes} 或 {lastType}",
+    "formats-one": "仅支持 {fileType} ",
+    "max-size": "最大尺寸：{value}MB",
+    "file-uploaded": "文件已上传",
+    "file-data": "{fileName} {fileSize}MB"
+  },
+  "products": {
+    "sort-label": "按 {value}筛选"
+  },
+  "movers": {
+    "title": "趋势榜"
+  },
+  "artists": {
+    "title": "热门艺术家"
+  },
+  "brand": {
+    "create": {
+      "create-brand": "创建品牌",
+      "label": {
+        "brand-name": "品牌名称",
+        "brand-url": "品牌网址Brand URL",
+        "description": "描述",
+        "brand-symbol": "品牌标识Brand symbol",
+        "brand-avatar": "品牌头像Brand avatar"
+      },
+      "avatar-accepts": "支持 JPG, PNG, JPEG2000",
+      "avatar-recommended-size": "推荐300x300"
+    },
+    "card": {
+      "itemsCount": "{value, plural, =0 {No items} =1 {One item} other {# items}}",
+      "addNewItem": "添加新商品",
+      "createNewItem": "创建新商品",
+      "createNewBrand": "创建新品牌"
+    }
+  },
+  "create-brand-nft": {
+    "title": "创建品牌NFT",
+    "label": {
+      "name": "名称",
+      "description": "描述",
+      "channel": "类型",
+      "standard": "标准",
+      "supply": "总量"
+    },
+    "channelOption": {
+      "FineArts": "艺术",
+      "Sports": "体育",
+      "Comics": "漫画"
+    },
+    "standardOption": {
+      "0": "ERC-721",
+      "1": "ERC-1155"
+    },
+    "submit": "创建",
+    "submitting": "正在创建中"
+  },
+  "overview": {
+    "brands": {
+      "title": "热门品牌"
+    }
+  },
+  "brands": {
+    "title": "品牌",
+    "no-items": "暂无商品"
+  },
+  "publish-nft": {
+    "title": "出售",
+    "submit": "出售",
+    "submitting": "提交",
+    "fee": "Fangible平台费{value}%",
+    "receive": "商品成功出售后，您将收到 <b>{value} {unit}</b>",
+    "expire": "将于 {value, date, medium} {value, time, short}结束",
+    "auction-amount": "您只能出售1个商品",
+    "auction-type": {
+      "fixed-swap": "固价出售",
+      "english-auction": "英式拍卖"
+    },
+    "label": {
+      "type": "销售方式",
+      "price": "价格",
+      "amount": "数量",
+      "minBid": "最低出价",
+      "directPurchase": "直接购买价",
+      "reservePrice": "最低购买价",
+      "count": "数量",
+      "duration": "截止日期"
+    },
+    "tooltip": {
+      "directPurchase": "设置直接购买价后，买家可跳过竞拍流程，直接以该价格进行购买。直接购买价需大于最低出价和最低购买价。",
+      "reservePrice": "设置最低购买价后，若买家出价未达到或超过该价格，您的拍卖商品将不会被出售。",
+      "duration": "拍卖将于该时间结束"
+    },
+    "error": {
+      "wrong-direct-reserve-bid-amount": "请确保：最低出价 ≤ 最低购买价 < 直接购买价"
+    }
+  },
+  "profile": {
+    "customize-btn": "自定义",
+    "follow": "关注",
+    "unfollow": "取消关注",
+    "subscribers": "Subscribers",
+    "bio": "个人介绍",
+
+    "user-profile": "个人主页",
+    "edit-profile": "编辑个人信息",
+    "edit-avatar": "编辑头像",
+    "edit-cover": "编辑主页封面",
+    "no-items": {
+      "title": "未找到任何商品",
+      "descr": "您还未创建任何NFT",
+      "btn": "浏览市场"
+    },
+    "edit": {
+      "label": {
+        "username": "用户名",
+        "full-name": "全名",
+        "email": "邮件",
+        "custom-url": "自定义网站地址",
+        "bio": "个人介绍",
+        "website": "网站"
+      },
+      "placeholder": {
+        "instagram": "Instagram用户名",
+        "twitter": "Twitter用户名",
+        "facebook": "Facebook用户名"
+      },
+      "save-changes": "保存修改",
+      "success-message": "修改成功"
+    },
+    "tabs": {
+      "my-items": "我的商品",
+      "my-bids": "我的出价",
+      "my-brands": "我的品牌",
+      "activity": "动态",
+      "liked": "收藏",
+      "following": "关注",
+      "followers": "粉丝"
+    },
+    "activity": {
+      "event": "活动",
+      "item": "商品",
+      "price": "价格",
+      "quantity": "数量",
+      "from": "由",
+      "to": "转到",
+      "date": "日期"
+    },
+    "bids-categories": {
+      "all": "所有",
+      "art": "艺术",
+      "sport": "体育",
+      "comics": "漫画"
+    }
+  },
+  "buy-dialog": {
+    "title": "立即购买",
+    "submit": "购买"
+  },
+  "cropper": {
+    "rotate-left": "向左旋转",
+    "rotate-right": "向右旋转",
+    "flip-v": "垂直翻转",
+    "flip-h": "水平翻转"
+  },
+  "video-player": {
+    "unsupported": "对不起，您的浏览器不支持嵌入式视频或上传的视频文件类型！"
+  },
+  "change-wallet": {
+    "title": "网络错误",
+    "description": "变更为币安链",
+    "submit": "变更为智能链",
+    "network-change-error": "由于RPC节点错误，无法在Metamask上设置币安链网络"
+  },
+  "info-prices": {
+    "claim": "领取",
+    "cancel": "下架",
+    "canceled": "已下架",
+    "status": {
+      "CompletedByDirectPurchase": {
+        "creator": "商品已售出，请领取您的收入",
+        "buyer": "商品已售出，请领取您的NFT",
+        "others": "商品已售出"
+      },
+      "NotSoldByReservePrice": {
+        "creator": "商品未出售，请取回您的NFT",
+        "buyer": "商品未出售，请取回您的出价",
+        "others": "商品未出售"
+      },
+      "Claimed": {
+        "default": "商品已领取",
+        "creator": "商品已售出"
+      },
+      "Live": {
+        "creator": "拍卖正在进行中"
+      }
+    }
+  },
+  "product-card": {
+    "put-on-sale": "出售",
+    "transfer": "发送token",
+    "burn": "销毁token"
   }
 }
