--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -322,8 +322,8 @@
   },
   "change-wallet": {
     "title": "Wrong network",
-    "description": "Change network to Binance Smart Chain",
-    "submit": "Change to Smart Chain",
+    "description": "Change network to Etherium Mainnet, Binance Smart Chain or Heco",
+    "submit": "Change network",
     "network-change-error": "Can't setup the BSC network on metamask because provider is undefined."
   },
   "info-prices": {
