optimized pool Detail

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -285,7 +285,7 @@
     "tabs": {
       "my-items": "My items",
       "my-bids": "My bids",
-      "my-sells": "My sells",
+      "my-sells": "My sales",
       "my-brands": "My brands",
       "activity": "Activity",
       "liked": "Liked",
