[FAN-162] Add a tab under My Sales

--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -285,6 +285,7 @@
     "tabs": {
       "my-items": "我的商品",
       "my-bids": "我的出价",
+      "my-sells": "我的售卖",
       "my-brands": "我的品牌",
       "activity": "动态",
       "liked": "收藏",
