[FAN-208] Add Sold out state in my brand

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -358,6 +358,11 @@
     }
   },
   "product-card": {
+    "not-on-sale": "Not on sale",
+    "price": "Price",
+    "top-bid": "Top Bid",
+    "sold-for": "Sold for",
+    "owner": "Owner",
     "put-on-sale": "Put on sale",
     "transfer": "Transfer token",
     "burn": "Burn token"
