--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -351,6 +351,10 @@
     }
   },
   "product-card": {
+    "not-on-sale": "未出售",
+    "price": "价格",
+    "top-bid": "最高出价",
+    "owner": "拥有者",
     "put-on-sale": "出售",
     "transfer": "发送token",
     "burn": "销毁token"
