refactor: replace literals with translation keys

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -11,6 +11,7 @@
     "close": "Close",
     "reset": "Reset",
     "restore": "Restore",
+    "unknown": "Unknown",
     "coming-soon": "Coming soon..."
   },
   "time": {
@@ -360,6 +361,7 @@
     }
   },
   "product-card": {
+    "owner": "Owner",
     "put-on-sale": "Put on sale",
     "transfer": "Transfer token",
     "burn": "Burn token"
