--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -11,6 +11,7 @@
     "close": "关闭",
     "reset": "重置",
     "restore": "恢复",
+    "unknown": "Unknown",
     "coming-soon": "敬请期待..."
   },
   "time": {
@@ -353,6 +354,7 @@
     }
   },
   "product-card": {
+    "owner": "拥有者",
     "put-on-sale": "出售",
     "transfer": "发送token",
     "burn": "销毁token"
