--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -131,24 +131,31 @@
     },
     "info": {
       "date": "{value, date, medium}",
-      "time": "at {value, time, short}"
+      "time": "at {value, time, short}",
+      "view-scan": "View on BscScan"
     },
     "dialog": {
       "input-info": "You must bid at least {value} {currency}",
       "footnote": "Bids placed in auction cannot be withdrawn"
     },
     "token-info": {
-      "standard": "Standard",
-      "total-supply": "Total Supply",
-      "name-tags": "Name Tags",
-      "contract": "Contract",
-      "token-id": "Token ID"
+      "standard": "Standard: ",
+      "total-supply": "Total Supply: ",
+      "name-tags": "Name Tags: ",
+      "contract": "Contract: ",
+      "token-id": "Token ID: "
     },
     "history": {
       "create-str": "Put on sale {quantity} editions for {price} {symbol}",
       "offer-str": "Offered {price} {symbol} for {quantity} edition",
       "cancel-str": "Canceled",
       "claim-str": "Claimed"
+    },
+    "bid": {
+      "bid-placed":"Bid placed"
+    },
+    "owner":{
+      "balance": "{balance} copies"
     }
   },
   "form": {
