Add pagination to marketplace

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -336,6 +336,12 @@
       "Comicbooks": "Comic"
     }
   },
+  "market": {
+    "pagination": {
+      "first-title": "First",
+      "last-title": "Last"
+    }
+  },
   "buy-dialog": {
     "title": "Buy now",
     "submit": "Buy"
