--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -330,6 +330,12 @@
       "Comicbooks": "漫画"
     }
   },
+  "market": {
+    "pagination": {
+      "first-title": "First",
+      "last-title": "Last"
+    }
+  },
   "buy-dialog": {
     "title": "立即购买",
     "submit": "购买"
