--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -28,9 +28,13 @@
     "create": "Create",
     "connect": "Connect Wallet",
     "inventory": "My Inventory",
-    "brands": "My Brands",
+    "my-brands": "My Brands",
     "profile-settings": "Profile settings",
     "disconnect": "Disconnect",
+    "stories": "St\uD83D\uDD25ries",
+    "market": "Market",
+    "brands": "Brands",
+    "how-it-works": "How it works",
     "search": {
       "placeholder": "Search by name, creator, brand...",
       "empty": "No results found",
