refactor: rename header link stories -> drops

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -31,7 +31,7 @@
     "my-brands": "My Brands",
     "profile-settings": "Profile settings",
     "disconnect": "Disconnect",
-    "stories": "St\uD83D\uDD25ries",
+    "drops": "Dr\uD83D\uDD25ps",
     "market": "Market",
     "brands": "Brands",
     "how-it-works": "How it works",
