--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -175,6 +175,9 @@
     "max": "Highest value is {value}",
     "invalid-email": "Enter a valid Email",
     "invalid-website": "Enter a valid Website URL",
+    "invalid-instagram": "Enter a valid instagram Website URL",
+    "invalid-twitter": "Enter a valid twitter Website URL",
+    "invalid-facebook": "Enter a valid facebook Website URL",
     "invalid-type": "Invalid file type",
     "max-size": "Max size is {value, number}MB"
   },
@@ -306,10 +309,10 @@
         "facebook": "Facebook"
       },
       "placeholder": {
-        "website": "Website URL",
-        "instagram": "Instagram Username",
-        "twitter": "Twitter Username",
-        "facebook": "Facebook Username"
+        "website": "Website Link",
+        "instagram": "Instagram Link",
+        "twitter": "Twitter Link",
+        "facebook": "Facebook Link"
       },
       "save-changes": "Save Changes",
       "success-message": "Changes have been applied successfully."
