[FAN-46] Transfer and burn token (#91)
* [FAN-46] Burn token

* [FAN-46] Transfer token

* [FAN-46] Improve UI

* Update getByLikeStr.ts

Remove unused import

* [FAN-46] Update props

* [FAN-46] Update type

* [FAN-46] Apply linter-staged

Co-authored-by: Aleksandr Ishchenko <aleksandr@ankr.com>

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -403,6 +403,14 @@
     "transfer": "Transfer token",
     "burn": "Burn token"
   },
+  "transfer-token": {
+    "title": "Transfer Token",
+    "submit": "Transfer"
+  },
+  "burn-token": {
+    "title": "Burn Token",
+    "submit": "Burn"
+  },
   "empty-data": {
     "title": "Whoops. Looks like there's no data.",
     "text": "Try to change the network to view the content of the page."
