--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -415,5 +415,15 @@
   "empty-data": {
     "title": "Whoops. Looks like there's no data.",
     "text": "Try to change the network to view the content of the page."
+  },
+  "drops": {
+    "top-creators": "Top Creators",
+    "upcoming": "Upcoming  dr🔥ps",
+    "previous": "Previous drops"
+  },
+  "drop-details": {
+    "live": "Live",
+    "sold": "Sold",
+    "timer-descr": "until the Drop ends"
   }
 }
