--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -163,6 +163,9 @@
     },
     "owner": {
       "balance": "{balance} copies"
+    },
+    "tooltip": {
+      "bid-warning": "Please note that you will be unable to cancel after placing your bid. Your bid will be valid until it has been outbid, accepted by the creator or expires."
     }
   },
   "form": {
