--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -248,6 +248,7 @@
   },
   "brands": {
     "title": "Brands",
+    "items": "{num} items",
     "no-items": "There is no items created yet."
   },
   "publish-nft": {
