--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -22,7 +22,8 @@
     "days-short": "{days}d",
     "hours-short": "{hours}h",
     "minutes-short": "{minutes}m",
-    "seconds-short": "{seconds}s"
+    "seconds-short": "{seconds}s",
+    "finished-on": "Finished on {end, date, medium}"
   },
   "header": {
     "create": "Create",
@@ -418,5 +419,15 @@
   "empty-data": {
     "title": "Whoops. Looks like there's no data.",
     "text": "Try to change the network to view the content of the page."
+  },
+  "drops": {
+    "top-creators": "Top Creators",
+    "upcoming": "Upcoming  dr🔥ps",
+    "previous": "Previous drops"
+  },
+  "drop-details": {
+    "live": "Live",
+    "sold": "Sold",
+    "timer-descr": "until the Drop ends"
   }
 }
