--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -12,7 +12,8 @@
     "reset": "重置",
     "restore": "恢复",
     "unknown": "Unknown",
-    "coming-soon": "敬请期待..."
+    "coming-soon": "敬请期待...",
+    "nothing-found": "Nothing found"
   },
   "time": {
     "time-over": "该拍卖已过期",
